--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       width: 100%; height: 100%; object-fit: fill; 
       z-index: 5;
       transition: filter 0.5s ease;
+      /* FIX ORIENTATION: Rotate 180 degrees */
+      transform: rotate(180deg);
     }
 
     /* HUD OVERLAY */
@@ -243,4 +245,5 @@
     runForever();
   </script>
 </body>
+
 </html>
