--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             <label>CAM_INPUT_></label>
             <select id="cam-select">
                 <option value="192.168.1.199">Robot_cam_1(199)</option>
-                <option value="192.168.1.177">Robot_cam_2(177)</option>
-                <option value="192.168.1.166">Model_cam_1(166)</option>
-                <option value="192.168.1.155">Model_cam_2(155)</option>
-                <option value="192.168.1.104">Model_cam_3(104)</option>
+                <option value="192.168.1.177">Model_cam_1(177)</option>
+                <option value="192.168.1.166">Model_cam_2(166)</option>
+                <option value="192.168.1.155">Model_cam_3(155)</option>
+                <option value="192.168.1.144">Robot_Cam_2(144)</option>
             </select>
         </div>
 
@@ -247,3 +247,4 @@
 </body>
 
 </html>
+
